--- a/style.css
+++ b/style.css
@@ -448,14 +448,14 @@ div#accordion {
   justify-content: center;
   align-items: center;
   gap: 2em;
-  transition: all 0.25s ease-out;
 
   & > article {
     display: grid;
     grid-template-columns: 1fr auto;
-    grid-template-rows: auto 1fr;
+    grid-template-rows: auto 0fr;
     overflow: hidden;
     row-gap: 1.5em;
+    transition: all 0.25s ease-out;
     border-bottom: 1px solid hsl(0, 0%, 90%);
 
     & h4 {
@@ -473,10 +473,7 @@ div#accordion {
 
     &[data-open="true"] {
       padding-block-end: 2em;
-
-      & > div > p {
-        height: 100%;
-      }
+      grid-template-rows: auto 1fr;
 
       & > svg {
         transform: rotateZ(180deg);
@@ -499,10 +496,7 @@ div#accordion {
 
     & > div {
       grid-area: 2 / 1 / 3 / 3;
-      & > p {
-        transition: all 0.25s ease-out;
-        height: 0px;
-      }
+      overflow: hidden;
     }
   }
 }
