--- a/style.css
+++ b/style.css
@@ -32,12 +32,26 @@ body {
   height: max-content;
 }
 
+@media screen and (max-width: 800px) {
+  body {
+    &:has(header > nav.open) {
+      & > footer > ul:last-child {
+        position: absolute;
+        top: 90%;
+        transform: translateY(-100%);
+        z-index: 100;
+      }
+    }
+  }
+}
+
 header,
 footer {
   padding-inline: 10%;
 }
 
 header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   gap: 3em;
@@ -45,13 +59,79 @@ header {
   width: 100%;
   height: 100px;
 
+  & > span {
+    display: block;
+    width: 18px;
+    height: 15px;
+    background-image: url(./images/icon-hamburger.svg);
+    z-index: 500;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  & > li {
+    z-index: 50;
+  }
+
+  @media screen and (max-width: 1200px) {
+    padding-inline: 5%;
+  }
   @media screen and (min-width: 800px) {
     & > span {
+      position: relative;
       display: none;
+      z-index: 100;
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    &::after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      top: 0;
+      content: "";
+      width: 100%;
+      height: 0svh;
+      background-color: hsla(229, 53%, 22%, 0.9);
+      z-index: 30;
+      transition: all 0.25s ease-out;
+    }
+
+    &:has(nav.open) {
+      & > span {
+        background-image: url(./images/icon-close.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+      & > li {
+        & > svg > g {
+          & > circle {
+            fill: #fff;
+          }
+          & > g > path {
+            fill: hsla(229, 53%, 22%, 0.9);
+          }
+          & > path {
+            fill: white;
+          }
+        }
+      }
+
+      &::after {
+        height: 100svh;
+      }
+
+      & > nav {
+        height: 50svh;
+      }
     }
   }
 }
 header > nav {
+  z-index: 41;
+  transition: all 0.25s ease-out;
   & > ul {
     display: flex;
     align-items: center;
@@ -76,6 +156,46 @@ header > nav {
           background-color: #fff;
           color: hsl(0, 94%, 66%);
           cursor: pointer;
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 800px) {
+    position: absolute;
+    left: 0;
+    top: 120px;
+    height: 0svh;
+    width: 100%;
+    overflow: hidden;
+
+    & > ul {
+      flex-direction: column;
+      gap: 0;
+      width: 100%;
+      padding-inline: 5%;
+
+      & > li {
+        text-transform: uppercase;
+        padding-block: 1.5em;
+        color: white;
+        font-size: 1.25em;
+        border-top: 1px solid hsla(0, 0%, 90%, 0.2);
+        width: 100%;
+        text-align: center;
+        &:last-child {
+          padding-block-end: 0;
+          & > button {
+            width: 100%;
+            background: transparent;
+            outline: 2px solid white;
+            font-size: 1em;
+            text-transform: uppercase;
+            letter-spacing: 0.25ch;
+            &:hover {
+              color: white;
+            }
+          }
         }
       }
     }
@@ -161,6 +281,28 @@ section#heroSection {
     border-top-left-radius: 150px;
     border-bottom-left-radius: 150px;
   }
+
+  @media screen and (max-width: 1200px) {
+    display: flex;
+    flex-direction: column-reverse;
+    place-items: center;
+    gap: 5em;
+    & > img {
+      width: clamp(400px, 100%, 100px);
+    }
+
+    & > article {
+      align-items: center;
+      text-align: center;
+    }
+
+    & > div.shapeBg {
+      top: 10%;
+      height: 40%;
+      width: 50%;
+      min-width: 350px;
+    }
+  }
 }
 
 section#featureSection {
@@ -174,7 +316,7 @@ section#featureSection {
   max-width: 100%;
 
   & > p {
-    width: clamp(200px, 50%, 500px);
+    width: clamp(300px, 50%, 500px);
     text-align: center;
   }
 
@@ -185,6 +327,7 @@ section#featureSection {
     align-items: center;
 
     & > li {
+      position: relative;
       padding: 1em 2em;
       height: 100%;
       color: hsl(0, 0%, 40%);
@@ -196,11 +339,82 @@ section#featureSection {
       }
 
       &.active {
-        border-bottom: 3px solid hsl(0, 94%, 66%);
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 3px;
+          background-color: hsl(0, 94%, 66%);
+          bottom: 0;
+          left: 0;
+        }
         & > p {
           color: hsl(0, 0%, 0%);
         }
       }
+    }
+
+    @media screen and (max-width: 800px) {
+      width: 100%;
+
+      & > li {
+        & > p {
+          text-align: center;
+        }
+
+        &.active {
+          &::after {
+            width: 125px;
+            left: 50%;
+            transform: translateX(-50%);
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: 650px) {
+      flex-direction: column;
+
+      & > li {
+        border-top: 2px solid hsl(0, 0%, 90%);
+        width: 100%;
+      }
+    }
+  }
+  @media screen and (max-width: 1200px) {
+    & > div#carouselContainer {
+      padding-block-start: 0;
+      & > div.carousel {
+        position: relative;
+        gap: clamp(5em, 10vh, 50em);
+        & > img {
+          width: 50%;
+          min-width: 300px;
+        }
+
+        & > article {
+          width: 100%;
+          max-width: 600px;
+          align-items: center;
+          text-align: center;
+
+          & > button {
+            display: none;
+          }
+        }
+      }
+    }
+    & > div.shapeBg[role="img"] {
+      bottom: 25%;
+      width: 50%;
+      height: 30%;
+      max-height: 300px;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    & > div.shapeBg[role="img"] {
+      bottom: 25%;
+      max-height: 200px;
     }
   }
 
@@ -241,7 +455,7 @@ section#extensionSection {
   gap: 2em;
 
   & > p {
-    width: clamp(200px, 50%, 500px);
+    width: clamp(300px, 50%, 500px);
     text-align: center;
   }
 
@@ -258,9 +472,10 @@ section#extensionSection {
       flex-direction: column;
       justify-content: space-between;
       height: fit-content;
-      gap: 4em;
+      gap: 5em;
       align-items: center;
-      width: clamp(350px, 100%, 600px);
+      min-width: 200px;
+      width: clamp(200px, 100%, 600px);
       background-color: #fff;
       border-radius: 1em;
       box-shadow: 0 7px 8px 0px rgba(0, 0, 0, 0.15);
@@ -289,7 +504,7 @@ section#extensionSection {
           background: url(./images/bg-dots.svg);
           background-repeat: no-repeat;
           background-position: center;
-          background-size: 150%;
+          background-size: 100%;
           top: 75%;
           transform: translateY(-50%);
         }
@@ -321,6 +536,20 @@ section#extensionSection {
       }
     }
   }
+
+  @media screen and (max-width: 1200px) {
+    padding-inline: 5%;
+  }
+
+  @media screen and (max-width: 800px) {
+    grid-template-rows: repeat(3, auto);
+    & > div.extensionCardContainer {
+      flex-direction: column;
+      width: clamp(300px, 50%, 350px);
+      align-self: center;
+      gap: 3em;
+    }
+  }
 }
 
 section#accordionSection {
@@ -330,7 +559,7 @@ section#accordionSection {
   gap: 2em;
 
   & > p {
-    width: clamp(200px, 50%, 500px);
+    width: clamp(300px, 50%, 500px);
     text-align: center;
   }
 
@@ -438,11 +667,33 @@ section#joinSection {
       z-index: -1;
       border-radius: 3px;
     }
+
+    @media screen and (max-width: 800px) {
+      grid-template-columns: 1fr;
+      width: 100%;
+      gap: 2em;
+      &:has(input.invalid) {
+        &::after {
+          left: 100%;
+          top: 10px;
+          transform: translateX(-150%);
+        }
+      }
+
+      & > label {
+        height: 50%;
+        width: 100%;
+      }
+
+      & > button {
+        width: 100%;
+      }
+    }
   }
 }
 
 div#accordion {
-  width: 500px;
+  width: clamp(0px, 100%, 500px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -524,7 +775,7 @@ div#carouselContainer {
       display: flex;
       flex-direction: column;
       gap: 2em;
-      width: clamp(200px, 50%, 500px);
+      width: clamp(300px, 50%, 500px);
 
       & > button {
         padding: 1em 2em;
@@ -540,6 +791,10 @@ div#carouselContainer {
           outline: 2px solid hsl(231, 69%, 60%);
         }
       }
+    }
+
+    @media screen and (max-width: 1200px) {
+      flex-direction: column;
     }
   }
 }
@@ -575,6 +830,14 @@ footer {
           color: hsl(0, 94%, 66%);
         }
       }
+    }
+  }
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+    gap: 2em;
+
+    & > ul:first-child {
+      flex-direction: column;
     }
   }
 }
