--- a/style.css
+++ b/style.css
@@ -65,7 +65,10 @@ header {
     width: 18px;
     height: 15px;
     background-image: url(./images/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     z-index: 500;
+    padding: 1em;
     &:hover {
       cursor: pointer;
     }
@@ -94,7 +97,7 @@ header {
       top: 0;
       content: "";
       width: 100%;
-      height: 0svh;
+      height: 0vh;
       background-color: hsla(229, 53%, 22%, 0.9);
       z-index: 30;
       transition: all 0.25s ease-out;
@@ -121,7 +124,7 @@ header {
       }
 
       &::after {
-        height: 100svh;
+        height: 100vh;
       }
 
       & > nav {
@@ -273,7 +276,7 @@ section#heroSection {
     }
   }
 
-  div.shapeBg {
+  & div.shapeBg {
     position: absolute;
     bottom: 0;
     right: 0;
@@ -282,8 +285,9 @@ section#heroSection {
     border-top-left-radius: 150px;
     border-bottom-left-radius: 150px;
   }
-
-  @media screen and (max-width: 1200px) {
+}
+@media screen and (max-width: 1200px) {
+  section#heroSection {
     display: flex;
     flex-direction: column-reverse;
     place-items: center;
@@ -412,12 +416,6 @@ section#featureSection {
       max-height: 300px;
     }
   }
-  @media screen and (max-width: 800px) {
-    & > div.shapeBg[role="img"] {
-      bottom: 25%;
-      max-height: 200px;
-    }
-  }
 
   &:has(ul > li:first-child.active) > div#carouselContainer {
     transform: translateX(0%);
@@ -445,6 +443,15 @@ section#featureSection {
     width: 40%;
     height: 45%;
     border-radius: 0 150px 150px 0;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  section#featureSection {
+    & > div.shapeBg[role="img"] {
+      bottom: 25%;
+      max-height: 200px;
+    }
   }
 }
 
@@ -555,6 +562,7 @@ section#extensionSection {
 
 section#accordionSection {
   height: 100%;
+  min-height: 100svh;
   display: grid;
   place-items: center;
   gap: 2em;
